# cli-upload

./: .gitignore  .viking_logs  README.md  conftest.py  gofile.py  pre_commit.py  pyproject.toml  smoke_test.py  test_gofile.py  test_uc.py  test_uc_auth.py  test_viking.py  uc.py  ucf.spec  viking.py
.github/workflows/: ucf-release.yml
.jules/: bolt.md  palette.md  sentinel.md
